--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,5 +51,15 @@
     "vercel": "^50.4.8",
     "vite": "^6.0.0",
     "vitest": "^4.0.17"
+  },
+  "overrides": {
+    "tar": "^7.5.6",
+    "undici": "^6.23.0",
+    "@vercel/node": {
+      "path-to-regexp": "^6.3.0"
+    },
+    "@vercel/remix-builder": {
+      "path-to-regexp": "^6.3.0"
+    }
   }
 }
