--- a/backend/package.json
+++ b/backend/package.json
@@ -77,6 +77,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "overrides": {
+    "fast-xml-parser": "^5.3.4"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
